--- a/style.css
+++ b/style.css
@@ -17,6 +17,15 @@ body {
     top: 0px;
 }
 
+#search-left-navbar {
+    position: relative;
+    top: 21px;
+}
+
+.navsetting {
+    display: inline-block;
+}
+
 #apps-icon {
     height: 24px;
     width: 24px;
@@ -52,30 +61,6 @@ nav li a {
     text-decoration: none;
     opacity: 0.7;
     color: #000;
-}
-
-button {
-    -webkit-appearance: button;
-    -webkit-writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    color: buttontext;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: center;
-    align-items: flex-start;
-    cursor: default;
-    background-color: buttonface;
-    box-sizing: border-box;
-    font: 400 13.3333px Arial;
-    padding: 1px 6px;
-    border-width: 2px;
-    border-style: outset;
-    border-color: buttonface;
-    border-image: initial;
 }
 
 #sign_in {
@@ -187,6 +172,56 @@ p {
     bottom: 0;
     right: 15px;
 }
+
+#uppersearch {
+    position: relative;
+    margin: 0 auto;
+    margin-left: 119px;
+    width: 640px;
+    padding-left: 27px;
+    top: 20px;
+    
+}
+
+#textinput {
+    background: #fff;
+    display: flex;
+    border-radius: 8px;
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
+    height: 39px;
+    width: 638px;
+    border-radius: 24px;
+    z-index: 3;
+    height: 44px;
+    margin: 0 auto;
+}
+
+#searchlogo {
+    height: 30px;
+    width: 92px;
+    position: absolute;
+    left: -129px;
+    padding: 4px 28px 0 30px;
+    top: 4px;
+}
+
+#searchti {
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    color: rgba(0,0,0,.87);
+    word-wrap: break-word;
+    outline: none;
+    display: flex;
+    flex: 100%;
+    -webkit-tap-highlight-color: transparent;
+    margin-left: 20px;
+    
+}
+
+
 
 input {
     -webkit-writing-mode: horizontal-tb !important;
