--- a/style.css
+++ b/style.css
@@ -25,7 +25,9 @@ body {
 
 #search-left-navbar {
     position: relative;
-    top: 21px;
+    left: 120px;
+    padding: 16px 12px 12px 10px;
+    margin: 11px 1px 0;
 }
 
 .navsetting {
@@ -114,14 +116,35 @@ nav li a {
 #searchsignin {
     border: 4px;
     border-style: solid;
-    border-color: #4285f4;
+    border-color: #2b7de9;
     border-radius: 4px;
     line-height: 28px;
     padding: 0 21px;
     cursor: pointer;
     font-weight: bold;
     color: #FFF;
-    background-color: #4387fd;
+    background-color: #2b7de9;
+}
+
+#top_nav {
+    min-width: 1101px;
+    margin-top:  21px;
+    margin-left: 20px;
+}
+
+#top_nav_left {
+    outline: none;
+    float: left;
+    position: relative;
+    white-space: nowrap;
+    align-items: baseline;
+    display: flex;
+    justify-content: space-between;
+    min-width: 782px;
+}
+
+#top_nav_right {
+
 }
 
 #main {
