--- a/style.css
+++ b/style.css
@@ -56,6 +56,23 @@ body {
     top: 0px;
 }
 
+#search_icon {
+    display: inline-block;
+    fill: currentColor;
+    line-height: 24px;
+    position: relative;
+    width: 24px;
+    margin-right: 10px;
+    cursor: pointer;
+    color: #4285f4;
+}
+
+svg {
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
 .appsicon2 {
     color: #000;
     cursor: pointer;
@@ -109,7 +126,6 @@ nav li {
     display: inline;
     padding-right: 15px;
     padding: 16px 12px 12px 10px;
-    height: 16px;
     line-height: 16px;
     margin: 11px 1px 0;
     cursor: pointer;
@@ -335,10 +351,16 @@ p {
     display: flex;
     flex: 100%;
     -webkit-tap-highlight-color: transparent;
-    margin-left: 20px;
-    
+    margin-left: 20px;  
 }
 
+#results_info {
+    position: relative;
+    height: 43px;
+    top: 131.5;
+    margin-left: 150px;
+    color: #70757a;
+}
 
 
 input {
