--- a/style.css
+++ b/style.css
@@ -516,7 +516,19 @@ h3 {
     content: ' . ';
 }
 
-
+.result-preview {
+    position: relative;
+    margin-top: 0;
+    margin-bottom: 27px;
+    margin-left: -20px;
+    margin-right: -20px;
+    font-size: 14px;
+    line-height: 1.2;
+    text-align: left;
+    box-shadow: none;
+    border: 1px solid #dfe1e5;
+    border-radius: 8px;
+}
 
 input {
     -webkit-writing-mode: horizontal-tb !important;
