--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-body {
+html, body {
     background: #fff;
     color: #222;
     font-family: Arial, sans-serif;
     font-size: 13px;
+    height: 100%;
+    margin: 0;
 }
 
 #left-navbar {
@@ -270,16 +272,54 @@ p {
 #bottom-nav {
     position: absolute;
     bottom: 0;
-    left: 0;
+    left:0;
     background: #f2f2f2;
+    line-height: 40px;
+    min-width: 1101px;
     width: 100%;
+    overflow: hidden;
+    height: auto;
+    visibility: visible;
+    border-top: 1px solid #e4e4e4;
+}
+
+#location-details {
+    visibility: visible;
+    display: inline-block;
+    margin-left: 13px;
+    padding-left: 16px;
+    border-left: 1px solid #e4e4e4;
+    line-height: 15px;
+}
+
+#location-cnt {
+    margin-left: 166px;
+}
+
+#location-dot {
+    border-radius: 100%;
+    display: inline-block;
+    height: 10px;
+    margin: 6px 4px 9px 0;
+    vertical-align: middle;
+    width: 10px;
+    background: #9e9e9e;
+}
+
+#location-specific {
+    color: #333;
+    font-weight: bold;
+}
+
+.location-sep {
+    visibility: visible;
+    line-height: 15px;
+    color: #5f6368;
 }
 
 #upper-bottom {
-    padding-left: 40px;
     font-size: 15px;
     opacity: 0.6;
-    border-top: 1px solid #e4e4e4;
     border-bottom: 1px solid #e4e4e4;
 }
 
@@ -287,6 +327,23 @@ p {
     position: absolute;
     bottom: 0;
     right: 15px;
+}
+
+#lower-bottom {
+}
+
+#lower-left {
+    font-size: 14px;
+    margin-left: 166px;
+    visibility: visible;
+    white-space: nowrap;
+}
+
+.bottom-options {
+    display: inline;
+    padding-right: 5px;
+    padding: 6px 2px 2px 0px;
+    margin: 1px 1px 0;
 }
 
 #uppersearch {
@@ -517,7 +574,7 @@ h3 {
 }
 
 .result-preview {
-    position: relative;
+    position: absolute;
     margin-top: 0;
     margin-bottom: 27px;
     margin-left: -20px;
@@ -528,6 +585,7 @@ h3 {
     box-shadow: none;
     border: 1px solid #dfe1e5;
     border-radius: 8px;
+    top: 200px;
 }
 
 input {
